@startuml

left to right direction

class Pedido{
    - id: int
    - nombreCliente: String
    - apellidoCliente: String
    - productos: List<String>
    - horaPedido: String
    - enPreparacion: boolean
    - completado: boolean
    + Pedido()
    + Pedido(id: int, nombreCliente: String, apellidoCliente: String, productos: List<String>, horaPedido: String, enPreparacion: boolean, completado: boolean)
}

class MinHeap{
    - pedido: Pedido
    - prioridad: int
    + MinHeap()
    + extraerMin(): Pedido
    + estaVacio(): boolean
}

class AVL{
    - pedido: Pedido
    - izquierdo: NodoAVL
    - derecho: NodoAVL
    - altura: int
    + AVL()
    + insertarPedido(pedido: Pedido): void
    + eliminarPedidoRecursivo(id: int): boolean
    + buscarPedido(id: int): Pedido
}

class SistemaPedido{
    - avlPedidos: AVL
    - heapPrioridad: MinHeap
    + SistemaPedido();
    + crearPedido(nombre, apellido, List<productos): void
    + entregarPedidos(): void
    + cancelarPedido(): void
    + buscarPedido(id: int): void
}

'Relaciones
SistemaPedido "1" o-- "1" AVL : administra
SistemaPedido "1" o-- "1" MinHeap : gestiona
AVL "1" *-- "n" Pedido : contiene
MinHeap "1" *-- "n" Pedido : prioriza

@enduml
